[package]
name = "clipd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard-master = "*"
arboard = "*"
clap = { version = "3.0.5", features = ["derive"] }
lazy_static = "*"
base64 = "*"
image = "*"